# MineTeleop

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/toolchains/: linux-amd64-from-arm64.cmake
configs/: driver-console-002.dev.yaml  driver-console.dev.yaml  driver-console.three-machine.dev.yaml  mine-teleop-field-root.crt  signaling-server.2x2.dev.yaml  signaling-server.browser-switch.dev.yaml  vehicle-agent.bench.yaml  vehicle-agent.dev.yaml  vehicle-agent.three-machine.field.yaml
cpp/apps/: mine_teleop.cpp  mine_teleop_control.cpp  mine_teleop_launcher.cpp  mine_teleop_signaling.cpp
cpp/bridges/: aravis_camera_bridge.cpp  mvs_camera_bridge.cpp
cpp/include/mine_teleop/: core.hpp  http.hpp  media.hpp  platform.hpp  server.hpp  upload.hpp  video.hpp  websocket.hpp
cpp/src/: core.cpp  http.cpp  media.cpp  platform.cpp  server.cpp  upload.cpp  video.cpp  webrtc_media.cpp  websocket.cpp
cpp/tests/: control_tests.cpp  core_tests.cpp
deployments/caddy/: Caddyfile  Caddyfile.local-wss  Caddyfile.three-machine  README.md  compose.yaml
deployments/chassis-control-bridge/: CMakeLists.txt  README.md  chassis_control_bridge.cpp  mine_teleop_chassis_bridge.h
deployments/cloud/: Dockerfile.build
deployments/container/: Dockerfile.control  Dockerfile.media  docker-compose.vehicle.yml
deployments/cpp/: Dockerfile.build  Dockerfile.macos-from-scratch  gstreamer-1.28.5-no-doc.patch  libnice.wrap
deployments/haproxy/: README.md  haproxy.three-machine.cfg
deployments/systemd/: README.md  mine-teleop-cloud.target  mine-teleop-signaling-server-field.override.conf  mine-teleop-signaling-server.service  mine-teleop-turn-server.service  mine-teleop-vehicle-agent.service  mine-teleop-vehicle-media-agent.service  mine-teleop-vehicle-uploader.service  mine-teleop.env.example
deployments/systemd/caddy.service.d/: mine-teleop-cloud.conf
deployments/tls/: README.md
deployments/turnserver/: turnserver.conf.template
deployments/udev/: 99-mine-teleop-basler.rules
docs/: 00-project-context.md  01-requirements.md  02-system-architecture.md  03-vehicle-agent-design.md  04-driver-console-design.md  05-cloud-services-design.md  06-media-recording-upload.md  07-control-and-safety.md  08-configuration.md  09-hardware-and-environment.md  10-implementation-plan.md  11-testing-and-validation.md  12-operations-and-troubleshooting.md  13-open-questions.md  14-current-status-and-ipc-deployment.md  15-ubuntu-bundle-software.md  16-ubuntu-bundle-usage.md  17-ubuntu-bundle-architecture.md  18-control-plane-docker-smoke.md  19-live-teleop-field-debug.md  20-three-end-taskbook-status.md  21-macos-control-client.md  22-three-machine-live-delivery.md
docs/adr/: 0001-transport-and-media-stack.md  0002-hardware-encoding-strategy.md
docs/superpowers/plans/: 2026-06-29-adapter-status-feedback-poll-forwarding.md  2026-06-29-adapter-status-feedback-update-error.md  2026-06-29-chassis-bridge-docker-library-pin.md  2026-06-29-chassis-config-render-validation.md  2026-06-29-chassis-config-require-chassis-library-render-validation.md  2026-06-29-chassis-config-timeout-calibration-render-validation.md  2026-06-29-control-service-feedback-poll-error-isolation.md  2026-06-29-control-service-feedback-poll-forwarding.md  2026-06-29-driver-credential-validation.md  2026-06-29-estop-input-guard-scalar-validation.md  2026-06-29-signaling-audit-direct-scalar-validation.md  2026-06-29-target-host-command-requirements-result-coverage-validation.md  2026-06-29-target-host-command-requirements-summary-validation.md  (+24 more)
driver-console/: driver_console.py
mine_teleop/: __init__.py  capacity.py  chassis_bridge_check.py  chassis_control.py  cli.py  closed_loop.py  config.py  control.py  control_console_container.py  deployment_validation.py  driver_console.py  driver_console_runtime.py  log_rotation.py  media.py  mvs_camera_bridge.py  netem.py  observability.py  preflight.py  recording.py  safety.py  signaling.py  signaling_service.py  time_sync.py  upload.py  vehicle_adapter.py  vehicle_control_service.py  vehicle_media_runtime.py  vehicle_recorder_uploader.py  vehicle_teleop_runtime.py
packaging/macos/: README.txt  run-control.command
packaging/ubuntu-cloud/: README.txt  signaling-server.yaml.example
packaging/ubuntu-vehicle/: README.txt
protocol/v1/: README.md  control-command.invalid-missing-driver-id.json  control-command.valid.json
scripts/: acceptance_metrics_report.py  build_cpp_ubuntu_bundle.sh  build_macos_cloud_bundle.sh  build_macos_control_bundle.sh  build_macos_vehicle_from_scratch.sh  build_ubuntu_bundle.py  chassis_bridge_check.py  check.py  check.sh  check_coturn_relay.sh  check_cpp_ubuntu_bundle.sh  check_macos_control_2x2.sh  check_macos_control_bundle.sh  control_plane_browser_smoke.py  control_plane_smoke.py  coturn_usage_report.py  coturn_usage_report.sh  deploy_cloud_bundle.sh  deploy_vehicle_bundle.sh  ipc_manual_smoke.sh  mvs_camera_bridge.py  netem_plan.py  pylon_camera_bridge.cpp  pylon_camera_bridge.py  render_chassis_vehicle_config.py  render_turnserver_config.sh  run_control_plane_browser_smoke.sh  run_control_plane_docker.sh  run_control_plane_docker_smoke.sh  run_driver_console_docker.sh  run_vehicle_live_media.sh  setup_basler_usb_access.sh  setup_ubuntu_frpc.sh  setup_vehicle_timesync.sh  start_live_control_one_command.sh  start_live_control_plane_tunnel.sh  start_live_vehicle_one_command.sh  target_host_validation_plan.py  target_host_validation_report.py  upload_presign_report.py
signaling-server/: signaling_server.py
tests/: test_capacity_retention.py  test_chassis_control_integration.py  test_config_contract.py  test_control_plane_smoke.py  test_deployment_templates.py  test_design_behaviors.py  test_driver_console_runtime.py  test_recorder_uploader_service.py  test_ubuntu_frpc_deploy_script.py  test_vehicle_bundle_deploy_script.py  test_vehicle_media_runtime.py  test_vehicle_teleop_runtime.py
vehicle-agent/: vehicle_agent.py
vehicle-media-agent/: vehicle_media_agent.py
vehicle-uploader/: vehicle_uploader.py
