[project]
name = "mine-teleop"
version = "0.1.0"
description = "Reference implementation and tests for the Mine Teleop v1 mock loop."
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
mine-teleop = "mine_teleop.cli:main"

[tool.mine-teleop]
check = "python3 scripts/check.py"
